# DodgeAndSurvive

./: CMakeLists.txt  main.cpp
src/engine/: Game.cpp  Game.h  GameState.h
src/entites/: Enemy.cpp  Enemy.h  Player.cpp  Player.h
